--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,42 +17,237 @@
             </ul>
           </div>
         </div>
-        <section class="sec_main_recipe">
-          <div style="width:100%; height: 500px;">
-            <dl class="inner">
-              <dt>
-                <h3>
-                  음식은 맛이지!
-                  <em>"맛으로 먹보"</em>
-                </h3>
-                <div calss="btn_area">
-                  <a class="btn_more"> 더보기 </a>
-                </div>
-              </dt>
-              <dd>
-                <ol class="main_recipe">
-                  <li>
-                    <a class="recipe tumb">
-                      <img>
-                    </a>
-                  </li>
+      <section class="sec_main_recipe">
+        <div style="width:100%; height: 600px;">
+          <dl class="inner">
+            <dt>
+            <h3>
+              음식은 맛이지!<br>
+              <strong>"맛으로 먹보"</strong>
+            </h3>
+            <div calss="btn_area">
+              <a class="btn_more"> 더보기 </a>
+            </div>
+            </dt>
+            <dd>
+              <ol class="main_recipe">
+                <li>
+                  <a class="recipe tumb">
+                    <img src="imgs/user/음식1.jpg">
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
                   <span class="author">
-                    <a herf="">
-                      <img>
-                    </a>
-                    <strong>
-                      <a>아이디</a>
-                    </strong>
-                  </span>
-              </dd>
-          </div>
-          <div class="orange">
-          </div>
-        </section>
-        <section>
-        </section>
-      </div>
+                      <a herf="">
+                        <img src="imgs/user/회원1.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+                <li>
+                  <a class="recipe tumb">
+                    <img src="imgs/user/음식2.jpg">
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                  <span class="author">
+                      <a herf="">
+                        <img src="imgs/user/회원2.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+                <li>
+                  <a class="recipe tumb">
+                    <img src="imgs/user/음식3.jpg">
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                  <span class="author">
+                      <a herf="">
+                        <img src="imgs/user/회원3.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+                <li>
+                  <a class="recipe tumb">
+                    <img src="imgs/user/음식4.jpg">
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                  <span class="author">
+                      <a herf="">
+                        <img src="imgs/user/회원4.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+            </dd>
+          </dl>
+        </div>
+        <div class="orange">
+          <dl class="inner">
+            <dt>
+            <h3>
+              음식은 맛이지!<br>
+              <strong>"맛으로 먹보"</strong>
+            </h3>
+            <div calss="btn_area">
+              <a class="btn_more"> 더보기 </a>
+            </div>
+            </dt>
+            <dd>
+              <ol class="main_recipe">
+                <li>
+                  <a class="recipe tumb">
+                    <img src="imgs/user/음식3.jpg">
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                  <span class="author">
+                      <a herf="">
+                        <img src="imgs/user/회원3.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+                <li>
+                  <a class="recipe tumb">
+                    <img src="imgs/user/음식2.jpg">
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                  <span class="author">
+                      <a herf="">
+                        <img src="imgs/user/회원2.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+                <li>
+                  <a class="recipe tumb">
+                    <img>
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                  <span class="author">
+                      <a herf="">
+                        <img>
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+                <li>
+                  <a class="recipe tumb">
+                    <img src="img/음식3.jpg">
+                  </a>
+                  <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                  <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                  <span class="author">
+                      <a herf="">
+                        <img>
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                  <p>
+                    <a class="call_recipe"> 레시피 제목 </a>
+                  </p>
+                </li>
+            </dd>
+          </dl>
+        </div>
+      </section>
+      <section>
+      </section>
+    </div>
 
-      </div>
+    </div>
+    </div>
   </body>
 </html>
