--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,11 +1,11 @@
-h1, div, ul, li, fieldset, em, dl{
+h1, div, ul, li, ol, fieldset, em, dl, dd {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
 }
 
-ul{
+ul, ol{
   list-style: none;
 }
 
