검색기능 1차

--- a/views/body.ejs
+++ b/views/body.ejs
@@ -2,11 +2,11 @@
 	<div class="bar_top">
 	  <div class="inner">
 	    <!-- 레시피 검색 -->
-	    <form class="box_search" accept-charset="UTF-8" method="get">
+	    <form class="box_search" accept-charset="UTF-8" method="get" action="/posts/search/title">
 	      <input name="utf8" type="hidden" value="✓">
 	      <fieldset>
 	        <legend>레시피 검색</legend>
-	        <input type="text" name="name" placeholder="음식명, 재료명으로 검색해주세요." autocomplete="off">
+	        <input type="text" name="value" placeholder="음식명으로 검색해주세요." autocomplete="off">
 	        <button type="submit">검색</button>
 	      </fieldset>
 	    </form>
