--- a/views/list.ejs
+++ b/views/list.ejs
@@ -320,7 +320,7 @@
                     <option value="">22</option>
                     <option value="">33</option>
                 </select>
-                <input type="text" name="name" placeholder="음식명, 재료명으로 검색해주세요." autocomplete="off">
+                <input type="text" name="value" placeholder="음식명, 재료명으로 검색해주세요." autocomplete="off">
                 <button type="submit">검색</button>
             </fieldset>
         </form>
