--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="stylesheets/list.css">
+<script src="https://use.fontawesome.com/3268659a8a.js"></script>
 <div id="container">
     <section class="sec_main_recipe">
         <div style="width:100%;">
@@ -300,11 +301,15 @@
                         </li>
                     </ol>
                     <div class="paging">
-                        <a class="currnet" href="">1</a>
+                        <a href=""><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+                        <a class="current" href="">1</a>
                         <a rel="next" href="">2</a>
                         <a href="">3</a>
                         <a href="">4</a>
                         <a href="">5</a>
+                        <a href=""><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
                     </div>
                 </dd>
             </dl>
