--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<% include ../header.ejs %>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/list.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/list.css">
 </head>
 <body>
 <% include ../body.ejs %>
