--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
     <% include ../header.ejs %>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/post.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/post.css">
     <script
             src="https://code.jquery.com/jquery-3.1.1.js"
             integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
