모임기능 1차

--- a/views/body.ejs
+++ b/views/body.ejs
@@ -52,7 +52,7 @@
 	          <% } %>
 	        </li>
 	        <li>
-	          <a calss="btn_add_meeting">
+	          <a calss="btn_add_meeting" href="/meetings">
 	            <em class="ico_map"></em>
 	            <span class="map">
 	              "모임 등록하기"
