--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -74,7 +74,7 @@
                     <option value="author">작성자</option>
                     <option value="ingredient">재료</option>
                 </select>
-                <input type="text" name="value" placeholder="검색해주세요." autocomplete="off">
+                <input id="select_input" type="text" name="value" placeholder="검색해주세요." autocomplete="off">
                 <button type="submit">검색</button>
             </fieldset>
         </form>
