--- a/views/meetings/main.ejs
+++ b/views/meetings/main.ejs
@@ -79,19 +79,50 @@
 <div class="meeting_content">
     <div class="inner">
         <div class="item">
-            <img src="/imgs/user/음식1.jpg">
-            <div class="info">
-                <h2>모임제목</h2>
-                <span class="text">모임내용 블라블라블라</span>
-                <label>모임 날짜</label>
-                <span class="date">
-                    2016-12-12
-                </span>
-                <label>모임장소</label>
-                <span class="spot">
-                    과기대
-                </span>
-            </div>
+            <ol class="main_recipe">
+                <li>
+                    <a class="recipe tumb">
+                        <img src="imgs/user/음식1.jpg">
+                    </a>
+                    <span class="author">
+                      <a herf="">
+                        <img src="imgs/user/회원1.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                    <p>
+                        <a class="call_recipe"> 레시피 제목 </a>
+                    </p>
+                    <span class="date">2016-11-20</span>
+                    <span class="spot">과기대 미래관 알아서찾아</span>
+                </li>
+                <li>
+                    <a class="recipe tumb">
+                        <img src="img/음식2.jpg">
+                    </a>
+                    <span class="difficulty">
+                      난이도
+                      <strong>3</strong>
+                    </span>
+                    <span class="flavor">
+                      맛
+                      <strong>3</strong>
+                    </span>
+                    <span class="author">
+                      <a herf="">
+                        <img src="img/회원2.jpg">
+                      </a>
+                      <strong>
+                        <a>아이디</a>
+                      </strong>
+                    </span>
+                    <p>
+                        <a class="call_recipe"> 레시피 제목 </a>
+                    </p>
+                </li>
+            </ol>
         </div>
     </div>
 </div>
