모임기능 4차

--- a/views/body.ejs
+++ b/views/body.ejs
@@ -52,7 +52,7 @@
 	          <% } %>
 	        </li>
 	        <li>
-	          <a calss="btn_add_meeting" href="/meetings">
+	          <a calss="btn_add_meeting" href="/meetings/new">
 	            <em class="ico_map"></em>
 	            <span class="map">
 	              "모임 등록하기"
@@ -82,7 +82,7 @@
 	          <a href="">검색</a>
 	        </li>
 	        <li>
-	          <a href="">모임</a>
+	          <a href="/meetings">모임</a>
 	        </li>
 	      </ul>
 	    </div>
