--- a/views/meetings/main.ejs
+++ b/views/meetings/main.ejs
@@ -80,48 +80,30 @@
     <div class="inner">
         <div class="item">
             <ol class="main_recipe">
+              <% for(i=0;i<location.length;i++){ %>
                 <li>
                     <a class="recipe tumb">
-                        <img src="imgs/user/음식1.jpg">
+                        <img src="imgs/user/<%=location[i].img%>">
                     </a>
                     <span class="author">
                       <a herf="">
-                        <img src="imgs/user/회원1.jpg">
+                        <img src="imgs/user/<%=location[i].user[0].img%>">
                       </a>
                       <strong>
-                        <a>아이디</a>
+                        <a><%=location[i].user[0].name%></a>
                       </strong>
                     </span>
                     <p>
-                        <a class="call_recipe"> 레시피 제목 </a>
+                        <a class="call_recipe"> <%=location[i].title%> </a>
                     </p>
-                    <span class="date">2016-11-20</span>
-                    <span class="spot">과기대 미래관 알아서찾아</span>
+                    <span class="date"><%=location[i].date%></span>
+                    <% if(location[i].address.length>5){ %>
+                    <span class="spot"><%=location[i].address.substr(0,5)+"..." %></span>
+                    <% } else{ %>
+                    <span class="spot"><%=location[i].address%></span>
+                    <% } %>
                 </li>
-                <li>
-                    <a class="recipe tumb">
-                        <img src="img/음식2.jpg">
-                    </a>
-                    <span class="difficulty">
-                      난이도
-                      <strong>3</strong>
-                    </span>
-                    <span class="flavor">
-                      맛
-                      <strong>3</strong>
-                    </span>
-                    <span class="author">
-                      <a herf="">
-                        <img src="img/회원2.jpg">
-                      </a>
-                      <strong>
-                        <a>아이디</a>
-                      </strong>
-                    </span>
-                    <p>
-                        <a class="call_recipe"> 레시피 제목 </a>
-                    </p>
-                </li>
+              <% } %>
             </ol>
         </div>
     </div>
