posts/show/:id 라우터 추가

--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -22,7 +22,7 @@
 
 
                         <li>
-                            <a class="recipe tumb">
+                            <a class="recipe tumb" href="/posts/show/<%=list[i]._id %>">
                                 <img src="/imgs/user/<%=list[i].recipe[0].img %>">
                             </a>
                             <span class="difficulty">
