--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -14,13 +14,25 @@
                 <span class="time">min</span>
             </div>
             <div class="ingredient-area">
-                <label><i class="fa fa-check-square-o" aria-hidden="true"></i>재료리스트 2인분 기준<</label>
-               <span class="ingredient">재룟,재룟</span>
+                <label><i class="fa fa-check-square-o" aria-hidden="true"></i>재료리스트</label>
+                <span class="amount">2인분 기준</span>
+                <br>
+               <div class="item">
+                   <span class="ingredient">삼겹살</span>
+                   <strong class="ingredient-amount">2근</strong>
+               </div>
+                <div class="item">
+                    <span class="ingredient">치킨</span>
+                    <strong class="ingredient-amount">1마리</strong>
+                </div>
             </div>
         </section>
-        <section class="post_show_header">
-            <img class="recipe_img" src="/imgs/user/음식1.jpg">
-            <span class="recipe_text"></span>
+        <h1 class="title">조리 방법</h1>
+        <section class="post_show_recipe">
+            <div class="recipe-item">
+                <img class="recipe_img" src="/imgs/user/음식1.jpg">
+                <span class="recipe_text">1. 후라이팬에 전부 넣고 볶습니다.</span>
+            </div>
         </section>
     </div>
 </div>
